# starship_neural_network

./: .gitignore  README.md  __init__.py  animation.py  config.py  control_system.py  controller.py  controller_nn.py  core.py  nn_utils.py  pyproject.toml  requirements.txt  sample_scenario.json  sample_starship.json  simulation.py  starship.py
data/: ground.png.backup
docs/: architecture.md  developer_guide.md
tests/: starship.json  test_learning.py  test_simulation.py
